Minor Refactoring of the code